# software-papers

./: .gitignore  .tool-versions  LICENSE  README.md  README.md.template  check_links.py  extract.py  gen_readme.py  papers.yml  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: tests.yml
tests/: __init__.py  conftest.py  test_infrastructure.py
